<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">僵尸麻将</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">MainActivity</string>
    <string name="title_activity_game">Game</string>
    <string name="play">Play Now</string>
    <string name="set">Setting</string>
    <string name="ex">Exit</string>
    <string name="title_activity_setting">Setting</string>
    <string name="vol">Volume</string>

	<string name="menu_settings">Settings</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="start_download">Start_Download</string>
	<string name="my_file">My Download File</string>
	<string name="finished">Finished downloading</string>
</resources>